--- a/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
@@ -21,17 +21,17 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="_whitelistEmailButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" onAction="#DisplayWhitelist" prefHeight="40.0" prefWidth="194.0" text="Whitelist an email" textAlignment="CENTER">
+            <Button fx:id="_whitelistEmailButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" onAction="#DisplayWhitelistPane" prefHeight="40.0" prefWidth="194.0" text="Whitelist an email" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="_manageEmployeeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="173.0" mnemonicParsing="false" onAction="#DisplayManageEmployee" prefHeight="40.0" prefWidth="194.0" text="Manage employee" textAlignment="CENTER">
+            <Button fx:id="_manageEmployeeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="173.0" mnemonicParsing="false" onAction="#DisplayManageEmployeePane" prefHeight="40.0" prefWidth="194.0" text="Manage employee" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="_createStoreButton" alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="248.0" mnemonicParsing="false" onAction="#DisplayCreateStore" prefHeight="40.0" prefWidth="194.0" text="New store" textAlignment="CENTER">
+            <Button fx:id="_createStoreButton" alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="248.0" mnemonicParsing="false" onAction="#DisplayCreateStorePane" prefHeight="40.0" prefWidth="194.0" text="New store" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
@@ -51,7 +51,7 @@
                   </Label>
                   <Button fx:id="_CreateStoreDisplayButton" layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#CreateStore" prefHeight="40.0" prefWidth="278.0" text="Create" />
                   <Label fx:id="storeNameError" layoutX="100.0" layoutY="87.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
-                  <Button fx:id="_closeDisplayCreateStoreButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayCreateStore" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                  <Button fx:id="_closeDisplayCreateStoreButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayCreateStorePane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                   <TextField fx:id="storeImgUrlField" layoutX="100.0" layoutY="139.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the url of your store image (optional) " />
                   <Label fx:id="storeImgUrlError" layoutX="100.0" layoutY="173.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                   <Label fx:id="storeNameError11" alignment="BOTTOM_LEFT" contentDisplay="BOTTOM" layoutX="100.0" layoutY="105.0" prefHeight="34.0" prefWidth="278.0" text="Logos are displayed in 40x40px, &#10;please upload image with a resolution of 1:1" wrapText="true">
@@ -71,7 +71,7 @@
                   </Label>
                   <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#AddToWhiteList" prefHeight="40.0" prefWidth="278.0" text="Add to whitelist" />
                   <Label fx:id="emailWhitelistError" layoutX="100.0" layoutY="121.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
-                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayWhitelist" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayWhitelistPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="_manageEmployeePane" layoutX="81.0" layoutY="99.0" prefHeight="266.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
@@ -84,7 +84,7 @@
                   </Label>
                   <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#UpdateUser" prefHeight="40.0" prefWidth="278.0" text="Update account" />
                   <Label fx:id="emailManageEmployeeError" layoutX="100.0" layoutY="121.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
-                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayManageEmployee" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayManageEmployeePane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                </children>
             </AnchorPane>
          </children>
