--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -37,6 +37,7 @@
                     </columnConstraints>
                      <rowConstraints>
                         <RowConstraints />
+                        <RowConstraints />
                      </rowConstraints>
                   </GridPane>
                </content>
@@ -63,6 +64,7 @@
                         <TextField fx:id="_actionAmount" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="21.0" promptText=" Enter amount..." style="-fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
+                  <Button layoutX="658.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="40.0" text="Button" />
                </children>
             </AnchorPane>
          </children>
