--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -14,15 +14,6 @@
                <children>
                   <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="106.0" prefWidth="114.0" text="Back" />
                </children></AnchorPane>
-            <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
-               <children>
-                  <Label layoutX="34.0" layoutY="18.0" text="Léo RICHEZ &amp; Adrien EPPLING                                                 @SUPINFO 2023" textFill="WHITE">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
             <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" opacity="0.89" prefHeight="466.0" prefWidth="598.0">
                <children>
                   <Label contentDisplay="CENTER" layoutX="14.0" layoutY="9.0" prefHeight="52.0" prefWidth="221.0" text="Update User">
@@ -30,7 +21,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="-30.0" layoutY="86.0" prefHeight="52.0" prefWidth="194.0" text="Nickname : ">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="-30.0" layoutY="86.0" prefHeight="52.0" prefWidth="194.0" text="Username : ">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -55,7 +46,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNickname" prefHeight="40.0" prefWidth="176.0" text="Update nickname" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNickname" prefHeight="40.0" prefWidth="176.0" text="Update username" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -83,6 +74,28 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdateEmailPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
+                  <AnchorPane fx:id="_updateNicknamePane" layoutX="81.0" layoutY="119.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+                     <children>
+                        <TextField fx:id="_newNicknameTextField" layoutX="100.0" layoutY="112.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new username" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" onDragDetected="#UpdateMail" prefHeight="52.0" prefWidth="478.0" text="Update username">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#UpdateNickname" prefHeight="40.0" prefWidth="278.0" text="Update" />
+                        <Label fx:id="storeNameError1" layoutX="100.0" layoutY="146.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                        <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdateNicknamePane" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
+               <children>
+                  <Label layoutX="34.0" layoutY="18.0" text="Léo RICHEZ &amp; Adrien EPPLING                                                 @SUPINFO 2023" textFill="WHITE">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
