--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,9 +13,9 @@
          <children>
             <AnchorPane layoutX="-2.0" prefHeight="106.0" prefWidth="604.0" style="-fx-background-color: #E7ECEF;">
                <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" prefHeight="106.0" prefWidth="114.0" text="Back" />
+                  <Button fx:id="_backButton" mnemonicParsing="false" onAction="#back" prefHeight="106.0" prefWidth="114.0" text="Back" />
                </children></AnchorPane>
-            <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" opacity="0.89" prefHeight="466.0" prefWidth="598.0">
+            <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" prefHeight="466.0" prefWidth="598.0">
                <children>
                   <Label contentDisplay="CENTER" layoutX="14.0" layoutY="9.0" prefHeight="52.0" prefWidth="221.0" text="Update User">
                      <font>
@@ -46,6 +47,11 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="-30.0" layoutY="233.0" prefHeight="52.0" prefWidth="194.0" text="Rôle :">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNickname" prefHeight="40.0" prefWidth="176.0" text="Update username" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
@@ -61,7 +67,7 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <AnchorPane fx:id="_updateEmailPane" layoutX="71.0" layoutY="109.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+                  <AnchorPane fx:id="_updateEmailPane" layoutX="60.0" layoutY="81.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                      <children>
                         <TextField fx:id="_newEmailTextField" layoutX="100.0" layoutY="112.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new email" />
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" onDragDetected="#UpdateMail" prefHeight="52.0" prefWidth="478.0" text="Update Email">
@@ -74,7 +80,7 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdateEmailPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="_updateNicknamePane" layoutX="81.0" layoutY="119.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+                  <AnchorPane fx:id="_updateNicknamePane" layoutX="60.0" layoutY="81.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                      <children>
                         <TextField fx:id="_newNicknameTextField" layoutX="100.0" layoutY="112.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new username" />
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" onDragDetected="#UpdateMail" prefHeight="52.0" prefWidth="478.0" text="Update username">
@@ -87,6 +93,22 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdateNicknamePane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
+                  <AnchorPane fx:id="_updatePasswordPane" layoutX="60.0" layoutY="104.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+                     <children>
+                        <TextField fx:id="_newPasswordConfirmTextField" layoutX="100.0" layoutY="129.0" prefHeight="34.0" prefWidth="278.0" promptText="Confirm the new password" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" onDragDetected="#UpdateMail" prefHeight="52.0" prefWidth="478.0" text="Update password">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#UpdatePassword" prefHeight="40.0" prefWidth="278.0" text="Update" />
+                        <Label fx:id="_newPasswordConfirmError" layoutX="100.0" layoutY="163.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                        <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdatePasswordPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                        <TextField fx:id="_newPasswordTextField" layoutX="100.0" layoutY="59.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new password" />
+                        <Label fx:id="_newPasswordError" layoutX="100.0" layoutY="93.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                     </children>
+                  </AnchorPane>
+                  <ChoiceBox layoutX="418.0" layoutY="247.0" prefWidth="150.0" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
