--- a/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
@@ -69,12 +69,10 @@
             </children></AnchorPane>
         <AnchorPane layoutX="730.0" layoutY="106.0" prefHeight="513.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
             <children>
-                <Separator layoutX="34.0" layoutY="74.0" prefHeight="0.0" prefWidth="114.0" />
-                <Separator layoutX="34.0" layoutY="115.0" prefHeight="0.0" prefWidth="114.0" />
-                <Button fx:id="AllUsersButton" layoutX="34.0" layoutY="47.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Other user" textFill="#fafafa" />
-                <Button fx:id="_accountButton" layoutX="34.0" layoutY="88.0" mnemonicParsing="false" onAction="#Account" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="My account" textFill="#fafafa" />
-                <Separator layoutX="34.0" layoutY="161.0" prefHeight="0.0" prefWidth="114.0" />
-                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="134.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
+                <Button fx:id="AllUsersButton" layoutX="30.0" layoutY="45.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="Other user" textFill="#fafafa" />
+                <Button fx:id="_accountButton" layoutX="30.0" layoutY="84.0" mnemonicParsing="false" onAction="#Account" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="My account" textFill="#fafafa" />
+                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="434.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="Disconnect" textFill="#fafafa" />
+            <Separator layoutX="18.0" layoutY="-2.0" prefHeight="0.0" prefWidth="150.0" />
             </children>
         </AnchorPane>
     </children>
