--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -13,7 +13,7 @@
          <children>
             <AnchorPane layoutX="-2.0" prefHeight="106.0" prefWidth="604.0" style="-fx-background-color: #E7ECEF;">
                <children>
-                  <Button fx:id="_backButton" mnemonicParsing="false" onAction="#back" prefHeight="106.0" prefWidth="114.0" text="Back" />
+                  <Button fx:id="_backButton" mnemonicParsing="false" onAction="#Back" prefHeight="106.0" prefWidth="114.0" text="Back" />
                </children></AnchorPane>
             <AnchorPane layoutX="2.0" layoutY="105.0" onDragDetected="#DeleteAccount" prefHeight="466.0" prefWidth="598.0">
                <children>
@@ -42,7 +42,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="_nicknameLabel1" contentDisplay="RIGHT" layoutX="174.0" layoutY="164.0" prefHeight="52.0" prefWidth="194.0">
+                  <Label fx:id="_emailLabel" contentDisplay="RIGHT" layoutX="174.0" layoutY="164.0" prefHeight="52.0" prefWidth="194.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -52,7 +52,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNickname" prefHeight="40.0" prefWidth="176.0" text="Update username" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="92.0" mnemonicParsing="false" onAction="#DisplayUpdateNicknamePane" prefHeight="40.0" prefWidth="176.0" text="Update username" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -62,11 +62,12 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePassword" prefHeight="40.0" prefWidth="194.0" text="Update password" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="309.0" mnemonicParsing="false" onAction="#DisplayUpdatePasswordPane" prefHeight="40.0" prefWidth="194.0" text="Update password" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Button>
+                  <ChoiceBox fx:id="_roleChoice" layoutX="418.0" layoutY="247.0" prefWidth="150.0" />
                   <AnchorPane fx:id="_updateEmailPane" layoutX="60.0" layoutY="81.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                      <children>
                         <TextField fx:id="_newEmailTextField" layoutX="100.0" layoutY="112.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new email" />
@@ -108,7 +109,6 @@
                         <Label fx:id="_newPasswordError" layoutX="100.0" layoutY="93.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                      </children>
                   </AnchorPane>
-                  <ChoiceBox layoutX="418.0" layoutY="247.0" prefWidth="150.0" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
