--- a/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/UpdateEmployee.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -48,6 +47,11 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
+                  <Label fx:id="_roleLabel" contentDisplay="RIGHT" layoutX="185.0" layoutY="234.0" prefHeight="52.0" prefWidth="194.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                   <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="-30.0" layoutY="233.0" prefHeight="52.0" prefWidth="194.0" text="Rôle :">
                      <font>
                         <Font size="16.0" />
@@ -68,7 +72,6 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
-                  <ChoiceBox fx:id="_roleChoice" layoutX="418.0" layoutY="247.0" prefWidth="150.0" />
                   <AnchorPane fx:id="_updateEmailPane" layoutX="60.0" layoutY="81.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                      <children>
                         <TextField fx:id="_newEmailTextField" layoutX="100.0" layoutY="112.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the new email" />
@@ -110,6 +113,11 @@
                         <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseUpdatePasswordPane" prefHeight="15.0" prefWidth="58.0" text="Close" />
                      </children>
                   </AnchorPane>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="405.0" layoutY="240.0" mnemonicParsing="false" onAction="#DisplayRoleChoiceBox" prefHeight="40.0" prefWidth="176.0" text="Update role" textAlignment="CENTER">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
             <AnchorPane layoutX="-2.0" layoutY="572.0" prefHeight="54.0" prefWidth="604.0" style="-fx-background-color: #274C77;">
