--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -72,16 +72,24 @@
             </AnchorPane>
             <Pane fx:id="_storeEmployeePane" layoutX="381.0" layoutY="147.0" prefHeight="317.0" prefWidth="335.0">
                <children>
-                  <TabPane layoutX="14.0" layoutY="25.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                  <TabPane layoutX="-382.0" layoutY="25.0" prefHeight="342.0" prefWidth="985.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
-                      <Tab text="Employee">
+                      <Tab style="-fx-background-color: #ffffff;" text="Employee">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <ScrollPane prefHeight="183.0" prefWidth="236.0">
-                                      <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                      </content>
+                                    <ScrollPane prefHeight="306.0" prefWidth="730.0">
+                                       <content>
+                                          <GridPane fx:id="_employeeGridPane" prefHeight="293.0" prefWidth="732.0">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                          </GridPane>
+                                       </content>
                                     </ScrollPane>
                                  </children>
                               </AnchorPane>
