--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -28,6 +28,7 @@
                         <Font size="36.0" />
                      </font>
                   </Label>
+                  <Button fx:id="_deleteStoreButton" layoutX="558.0" layoutY="35.0" mnemonicParsing="false" onAction="#DeleteStore" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="Delete store" textFill="#fafafa" />
                </children>
             </AnchorPane>
             <ScrollPane layoutY="163.0" prefHeight="341.0" prefWidth="730.0">
