--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -67,7 +67,7 @@
                         <Button fx:id="_confirmAction" mnemonicParsing="false" onAction="#employeeAction" prefHeight="27.0" prefWidth="112.0" style="-fx-background-color: #A3CEF1; -fx-border-color: #6096BA; -fx-background-radius: 5; -fx-border-radius: 5;" text="Confirm" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
                         <TextField fx:id="_actionAmount" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="21.0" promptText=" Enter amount..." style="-fx-border-color: #A3CEF1; -fx-border-radius: 5; -fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Button fx:id="_storeEmployeeButton" mnemonicParsing="false" onAction="#showStoreEmployee" prefHeight="26.0" prefWidth="59.0" text="Employee" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
-                        <Button mnemonicParsing="false" text="Add new" GridPane.columnIndex="4" />
+                        <Button fx:id="_addNewProductButton" mnemonicParsing="false" onAction="#addNewProduct" text="Add new" GridPane.columnIndex="4" />
                      </children>
                   </GridPane>
                </children>
