--- a/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
@@ -41,7 +41,7 @@
                         </GridPane>
                      </content>
                   </ScrollPane>
-                  <Label layoutX="14.0" layoutY="7.0" text="All Stores">
+                  <Label layoutX="14.0" layoutY="7.0" style="-fx-font-weight: bold;" text="All Stores">
                      <font>
                         <Font size="36.0" />
                      </font>
@@ -55,7 +55,7 @@
                 <AnchorPane layoutX="730.0" layoutY="-10.0" prefHeight="122.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
                     <children>
                         <ImageView fx:id="_profileIcon" fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" />
-                        <Label fx:id="_pseudoLabel" alignment="CENTER" layoutX="78.0" layoutY="40.0" text="Username" textAlignment="CENTER" textFill="WHITE" />
+                        <Label fx:id="_pseudoLabel" alignment="CENTER" layoutX="78.0" layoutY="40.0" style="-fx-font-weight: bold;" text="Username" textAlignment="CENTER" textFill="WHITE" />
                         <Label fx:id="_emailLabel" alignment="CENTER" layoutX="24.0" layoutY="76.0" text="user email" textAlignment="CENTER" textFill="WHITE" />
                     </children></AnchorPane>
             <Separator layoutX="381.0" layoutY="23.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
