--- a/iStoreFX/src/main/resources/com/example/istorefx/AllUsers.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllUsers.fxml
@@ -20,9 +20,9 @@
                 <AnchorPane prefHeight="506.0" prefWidth="730.0" style="-fx-background-color: #274C77;">
                     <children>
                         <Separator layoutX="36.0" layoutY="82.0" prefHeight="3.0" prefWidth="347.0" style="-fx-background-color: #ffffff;" />
-                        <Label fx:id="_pseudoLabel1" alignment="CENTER" layoutX="36.0" layoutY="34.0" text="Users Browser" textAlignment="CENTER" textFill="WHITE">
+                        <Label fx:id="_pseudoLabel1" alignment="CENTER" layoutX="36.0" layoutY="24.0" style="-fx-font-weight: bold;" text="Users Browser" textAlignment="CENTER" textFill="WHITE">
                             <font>
-                                <Font size="24.0" />
+                                <Font size="30.0" />
                             </font>
                         </Label>
                   <Pane layoutX="36.0" layoutY="110.0" prefHeight="370.0" prefWidth="551.0" style="-fx-background-color: #E7ECEF;">
@@ -52,7 +52,7 @@
                 <AnchorPane layoutX="730.0" layoutY="-10.0" prefHeight="122.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
                     <children>
                         <ImageView fx:id="_profileIcon" fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" />
-                        <Label fx:id="_pseudoLabel" alignment="CENTER" layoutX="78.0" layoutY="40.0" text="Username" textAlignment="CENTER" textFill="WHITE" />
+                        <Label fx:id="_pseudoLabel" alignment="CENTER" layoutX="78.0" layoutY="40.0" style="-fx-font-weight: bold;" text="Username" textAlignment="CENTER" textFill="WHITE" />
                         <Label fx:id="_emailLabel" alignment="CENTER" layoutX="24.0" layoutY="76.0" text="user email" textAlignment="CENTER" textFill="WHITE" />
                     </children></AnchorPane>
                 <Separator layoutX="382.0" layoutY="22.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
