--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -119,11 +119,11 @@
             </children></AnchorPane>
         <AnchorPane layoutX="730.0" layoutY="106.0" prefHeight="513.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
             <children>
-                <Button fx:id="AllUsersButton" layoutX="30.0" layoutY="45.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="Other user" textFill="#fafafa" />
-                <Button fx:id="_accountButton" layoutX="30.0" layoutY="84.0" mnemonicParsing="false" onAction="#Account" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="My account" textFill="#fafafa" />
-                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="434.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77; -fx-border-color: #FF9494; -fx-border-radius: 5;" text="Disconnect" textFill="#ff9494" />
+                <Button fx:id="AllUsersButton" layoutX="30.0" layoutY="45.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5; -fx-font-weight: bold;" text="Other user" textFill="#fafafa" />
+                <Button fx:id="_accountButton" layoutX="30.0" layoutY="84.0" mnemonicParsing="false" onAction="#Account" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5; -fx-font-weight: bold;" text="My account" textFill="#fafafa" />
+                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="434.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77; -fx-border-color: #FF9494; -fx-border-radius: 5; -fx-font-weight: bold;" text="Disconnect" textFill="#ff9494" />
                 <Separator layoutX="18.0" layoutY="-2.0" prefHeight="0.0" prefWidth="150.0" />
-                <Button fx:id="_adminDashboardButton" layoutX="30.0" layoutY="124.0" mnemonicParsing="false" onAction="#AdminDashboard" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5;" text="Admin Dashboard" textFill="#fafafa" />
+                <Button fx:id="_adminDashboardButton" layoutX="30.0" layoutY="124.0" mnemonicParsing="false" onAction="#AdminDashboard" prefHeight="27.0" prefWidth="122.0" style="-fx-background-color: #274C77; -fx-border-color: #ffffff; -fx-border-radius: 5; -fx-font-weight: bold;" text="Admin Dashboard" textFill="#fafafa" />
             </children>
         </AnchorPane>
     </children>
